# demo-django-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
config/: settings.py  urls.py
docker/: ollama-init.sh
rag/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
rag/migrations/: 0001_initial.py
rag/services/: chunking.py  embeddings.py  llm.py  pdf.py  retrieval.py
rag/templates/rag/: base.html  document_detail.html  home.html
rag/tests/: test_chunking.py  test_retrieval.py  test_views.py
